# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.adoc  SECURITY.adoc  cookiecutter.json  requirements-dev.txt
.github/: cookiecutter-example.yml  labels.yml  renovate.json5
.github/workflows/: ci.yml  codeql.yml  issue-label-manager.yml  label-pr-sizes.yml  stale.yml
{{ cookiecutter.project_slug }}/: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  DEVELOPMENT.adoc  Dockerfile  LICENSE  README-DOCKER.adoc  README.adoc  README.md  README.orig.adoc  README_DOCKER.adoc  SECURITY.adoc  docker_smoke_test.py  pyproject.toml  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/.github/: pull_request_template.md  renovate.json5
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: 1-bug-report.yml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  codeql-analysis.yml  docker.yml  gh-pages.yml  issue-label-manager.yml  label-pr-sizes.yml  openssf-scorecards.yml  release-to-pypi.yml  stale.yml
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.pkg_name }}.py  {{ cookiecutter.pkg_name }}_test.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: {{ cookiecutter.pkg_name }}.py
