[metadata]
name = {{ cookiecutter.pkg_name }}
version = 0.1.0
description = {{ cookiecutter.project_short_description }}
long_description = file: README.adoc
long_description_content_type = text/plain
url = https://github.com/JonasPammer/{{ cookiecutter.project_slug }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
packages = find:
install_requires =
    {% if cookiecutter.command_line_interface|lower == 'click' %}Click>=8.0{% endif %}
    attrs>=21.0
    pyyaml
    types-PyYAML
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    {{ cookiecutter.pkg_name }} = {{ cookiecutter.pkg_name }}.{{ cookiecutter.pkg_name }}:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203
